# DeepThought

./: .gitignore  Makefile.am  Makefile.in  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
_data/: package.yml
doc/: DeepThought.xml  _AutoDocMainFile.xml  _Chapter_DeepThought_automatic_generated_documentation.xml  _Chapter_Deep_Thought.xml  _Chapter_The_Deep_Thought_algorithm.xml  _Chapter_Using_Deep_Thought_functions.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chapBib.html  chapBib.txt  chapBib_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  dtbib.xml  title.xml
examples/: EickEngel.g  bench.g  cmp_with_wm.g  ex_colls.g  ex_letters.g  plot_multi.g  read.g  table_inv.g  table_orders.g  table_r_rs.g  test.g
gap/: .fuse_hidden0000069e00000004  .fuse_hidden000006a600000006  .fuse_hidden000006b40000000b  .fuse_hidden000006b90000000d  .fuse_hidden000006c20000000f  .fuse_hidden0000071100000003  DTObj.gd  DTObj.gi  DTapplicability.g  DeepThought.gd  DeepThought.gi  applications.g  collectwordorfail.g  display.g  genericpols.g  least.g  left_of.g  letters.g  multiplication.g  polynomials.g  set_reps.g  structure_letters.g  useful_functions.g
src/: DeepThought.c
tst/: bgw.tst  compare-computed-results.tst  compare-dtpols.tstlong  examples.tst  extended.tstlong  finite.tst  heisenberg.tst  highlevel.tst  random.tst  somecolls.tst  test-bgw.tst  test-dtpols.tst  test-dtpols.tstlong  test-exmpls.tst  test-extended.tstlong  test-finite.tst  test-heisenberg.tst  (+8 more)
